prusti-tests/tests/verify/ui/counterexamples/enums-1.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/enums-1.rs:19:11
   |
19 | #[ensures(result)]
   |           ^^^^^^
   |
note: the error originates here
  --> $DIR/enums-1.rs:20:1
   |
20 | / fn test1(x: OneOfFive, y: SecondEnum) -> bool {
21 | |     match x {
22 | |         OneOfFive::One(_) => true,
23 | |         OneOfFive::Five { a, b, c, d, e } => match y {
...  |
28 | |     }
29 | | }
   | |_^
note: counterexample for "x"
        initial value: OneOfFive::Five {
            a: ?,
            b: ?,
            c: ?,
            d: ?,
            e: ?,
        }
        final value:   OneOfFive::Five {
            a: ?,
            b: ?,
            c: ?,
            d: ?,
            e: ?,
        }
  --> $DIR/enums-1.rs:20:10
   |
20 | fn test1(x: OneOfFive, y: SecondEnum) -> bool {
   |          ^
note: counterexample for "y"
        initial value: SecondEnum::One
        final value:   SecondEnum::One
  --> $DIR/enums-1.rs:20:24
   |
20 | fn test1(x: OneOfFive, y: SecondEnum) -> bool {
   |                        ^
note: counterexample for "a"
        final value:   1
  --> $DIR/enums-1.rs:23:27
   |
23 |         OneOfFive::Five { a, b, c, d, e } => match y {
   |                           ^
note: counterexample for "b"
        final value:   true
  --> $DIR/enums-1.rs:23:30
   |
23 |         OneOfFive::Five { a, b, c, d, e } => match y {
   |                              ^
note: counterexample for "c"
        final value:   2
  --> $DIR/enums-1.rs:23:33
   |
23 |         OneOfFive::Five { a, b, c, d, e } => match y {
   |                                 ^
note: counterexample for "d"
        final value:   'd' (0x64)
  --> $DIR/enums-1.rs:23:36
   |
23 |         OneOfFive::Five { a, b, c, d, e } => match y {
   |                                    ^
note: counterexample for "e"
        final value:   false
  --> $DIR/enums-1.rs:23:39
   |
23 |         OneOfFive::Five { a, b, c, d, e } => match y {
   |                                       ^
note: counterexample for result
        final value:   false
  --> $DIR/enums-1.rs:20:42
   |
20 | fn test1(x: OneOfFive, y: SecondEnum) -> bool {
   |                                          ^^^^

error: aborting due to previous error

